disabled workflow overview tab; global layout fixes; client profile tabs fixes and alignment

--- a/src/app/notification/notification.component.scss
+++ b/src/app/notification/notification.component.scss
@@ -4,11 +4,13 @@
 .notification-settings {
     &--top {
         height: $white-header-height;
-        padding: 16px 75px;
+        padding: 32px 50px;
         &__header {
-            font-size: 32px;
-            font-weight: 700;
+            font-family: 'Open Sans', sans-serif !important;
+            font-weight: 800;
             color: $dark-grey-color;
+            font-size: 36px;
+            line-height: 120%;
         }
     }
     &--content {
