--- a/src/app/shared/styles/material/mat-tab.scss
+++ b/src/app/shared/styles/material/mat-tab.scss
@@ -17,14 +17,17 @@ nav.client-details--tabs {
 
     .mat-tab-link {
         background-color: transparent !important;
-        padding: 0 24px !important;
-        min-width: 160px !important;
+        padding: 0 !important;
+        width: auto;
+        min-width: unset;
         font-weight: 700 !important;
         font-size: 16px !important;
         line-height: 16px !important;
+        justify-content: unset;
         opacity: 1;
         height: 50px;
-        margin-right: 5px;
+        margin-right: 35px;
+        color: #263238 !important;
 
         &.mat-tab-link-active,
         &:hover {
@@ -32,12 +35,12 @@ nav.client-details--tabs {
         }
 
         &:first-of-type {
-            margin-left: 60px;
+            margin-left: 50px;
         }
     }
     .mat-tab-body-content {
         height: calc(100vh - 200px);
-        padding: 16px 60px;
+        padding: 32px 50px;
     }
 }
 
@@ -72,7 +75,6 @@ mat-tab-group.client-documents--tabs {
         background-color: transparent !important;
         &-active,
         &:hover {
-            // background-color: #ffffff;
             box-shadow: unset !important;
         }
 
@@ -117,7 +119,7 @@ mat-tab-group.client-documents--tabs {
 
     .mat-tab-label {
         position: relative;
-        font-family: 'IBM Plex Mono', monospace !important;
+        font-family: 'Open Sans', sans-serif !important;
         opacity: 1 !important;
         height: 60px;
         padding: 8px 24px 0 24px;
@@ -128,11 +130,10 @@ mat-tab-group.client-documents--tabs {
         color: $dark-grey-color;
         box-shadow: unset;
         background-color: #fff;
-        margin-right: 5px;
         box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
         &:first-of-type {
             justify-content: flex-start;
-            padding: 8px 24px 0 36px;
+            padding: 8px 24px 0 56px;
         }
         .mat-tab-label-content {
             flex-direction: column;
@@ -141,6 +142,15 @@ mat-tab-group.client-documents--tabs {
         .tab-header {
             font-size: 16px;
             line-height: 16px;
+            &-overview { // Overview disabled
+                color: $light-grey-color;
+            }
+            &-detail {
+                font-weight: 700;
+                font-size: 12px;
+                line-height: 150%;
+                color: $light-grey-color;
+            }
         }
         .tab-subheader {
             font-size: 14px;
@@ -160,7 +170,7 @@ mat-tab-group.client-documents--tabs {
             box-shadow: 1px -6px 20px rgb(0 0 0 / 15%);
         }
         &-active,
-        &:hover {
+        &:hover:not(:first-of-type) {
             background-color: $sand-25-color;
             color: $dark-grey-color;
             box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.15);
@@ -170,13 +180,11 @@ mat-tab-group.client-documents--tabs {
         }
 
         &:first-of-type {
-            // margin-left: 75px !important;
+            &:hover {
+                pointer-events: none;
+            }
             width: 20%;
         }
-
-        // &:last-of-type {
-        //     margin-left: 0 !important;
-        // }
     }
 
      /* Needed in order to allow the sticky content  */
@@ -211,7 +219,7 @@ mat-tab-group.notification-settings--tabs {
 
     .mat-tab-label-container {
         padding-top: 0 !important;
-        margin: 0 75px;
+        margin: 0 50px;
     }
     .mat-tab-label {
         background-color: transparent !important;
@@ -228,14 +236,9 @@ mat-tab-group.notification-settings--tabs {
         &:hover {
             background-color: transparent !important;
         }
-
-        // &:last-of-type {
-        //     margin-left: auto;
-        //     margin-right: 0;
-        // }
     }
     .mat-tab-body-content {
         height: calc(100vh - 200px);
-        padding: 16px 60px;
+        padding: 32px 50px;
     }
 }
